resources/deployment.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: helloworld-rest
  namespace: ti-redhat-dev-ipa
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 120
      maxUnavailable: 10%
      maxSurge: 20%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 2
  test: false
  selector:
    deploymentConfig: helloworld-rest
  template:
    metadata:
      name: helloworld-rest
      creationTimestamp: null
      labels:
        app: helloworld-rest
        deploymentConfig: helloworld-rest
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      volumes:
        - name: eap-keystore-volume
          secret:
            secretName: eap7-app-secret
            defaultMode: 420
        - name: eap-jgroups-keystore-volume
          secret:
            secretName: eap7-app-secret
            defaultMode: 420
        - name: eap-ds-credential-store
          secret:
            secretName: eap-ds-credential-store
            defaultMode: 420
      containers:
        - resources:
            limits:
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          terminationMessagePath: /dev/termination-log
          name: helloworld-rest
          livenessProbe:
            httpGet:
              path: /
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 180
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          ports:
            - name: jolokia
              containerPort: 8778
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
            - name: ping
              containerPort: 8888
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: eap-keystore-volume
              readOnly: true
              mountPath: /etc/eap-secret-volume
            - name: eap-jgroups-keystore-volume
              readOnly: true
              mountPath: /etc/jgroups-encrypt-secret-volume
            - name: eap-ds-credential-store
              readOnly: true
              mountPath: /opt/eap/ssl
          terminationMessagePolicy: File
          image: >-
            image-registry.openshift-image-registry.svc:5000/ti-redhat-dev-ipa/helloworld-rest@sha256:5b7ad019f2d2ec802ce1ca39d6d01a104d42eac6e4a60e0a3ca6bb4830ac5c19
      restartPolicy: Always
      terminationGracePeriodSeconds: 75
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
