resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: helloworld-rest
  namespace: ti-redhat-dev-ipa
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deploymentConfig: helloworld-rest
